--- a/doodledocs-react/src/css/NavBar.scss
+++ b/doodledocs-react/src/css/NavBar.scss
@@ -1,7 +1,7 @@
 .navbar {
   font-family: 'Montserrat', sans-serif;
   padding: 1em 0em 1em 5%;
-  border-bottom: #BFD7EB 1px solid;
+  border-bottom: #000 2px solid;
   background-color: #fff;
   height: 3em;
   line-height: 3em;
