--- a/doodledocs-react/src/css/ToolBox.scss
+++ b/doodledocs-react/src/css/ToolBox.scss
@@ -1,22 +1,41 @@
 
-div.toolbox{
-  // background-color: #fff;
-  border: solid 2px;
-  height: 30px;
-  position: relative;
+// div.toolbox{
+//   // background-color: #fff;
+//   border: solid 2px;
+//   height: 30px;
+//   position: relative;
+// }
+//
+// .toolbox > img {
+//   margin-left: 15px;
+//   margin-right: 5px;
+//   /*border-radius: 0.5em;*/
+//   /*height: 2em;*/
+//   width: auto;
+//   display: inline-block;
+//   height: 25px;
+//   // display: inline;
+//   margin-top:0;
+//   margin-bottom: 0;
+//   position:relative;
+//   // z-index: 0;
+// }
+#toolbar .tools{
+  list-style: none;
+  padding:0;
+  margin-left: 5%
 }
 
-.toolbox > img {
-  margin-left: 15px;
-  margin-right: 5px;
-  /*border-radius: 0.5em;*/
-  /*height: 2em;*/
-  width: auto;
-  // display: inline-block;
-  height: 25px;
-  // display: inline;
-  margin-top:0;
-  margin-bottom: 0;
-  position:relative;
-  // z-index: 0;
+#toolbar .tools li{
+  display: inline;
+  padding: 0 7px
+}
+#toolbar .tools select, input{
+  vertical-align:top;
+  margin-top: 2.5px;
+  margin-left: 1px
+}
+
+#toolbar .tools input{
+  height: 25px
 }
